Site Ready to Deploy

--- a/landing/templates/index.html
+++ b/landing/templates/index.html
@@ -99,6 +99,15 @@
                     .promos-misPromos {
                         margin-top: 10px;
                     }
+
+                    .promos-container .promos-misPromos {
+                        display: none;
+                    }
+
+                    .promos-container .promos-misPromos2 {
+                        display: block;
+                    }
+
                 }
 
                 @media (max-width: 576px) {
@@ -117,6 +126,14 @@
                     
                     .promos-misPromos {
                         margin-top: 5px;
+                    }
+
+                    .promos-container .promos-misPromos {
+                        display: none;
+                    }
+
+                    .promos-container .promos-misPromos2 {
+                        display: block;
                     }
                 }
 
