--- a/landing/templates/layouts/navbar2.html
+++ b/landing/templates/layouts/navbar2.html
@@ -133,7 +133,7 @@
                 top: 60px;
                 height: 0;
                 width: 300px;
-                background-color: rgba(47, 47, 43, 0.595);
+                background-color: rgba(253, 253, 6, 0.25);
                 backdrop-filter: blur(15px);
                 border-radius: 10px;
                 overflow: hidden;
@@ -198,10 +198,10 @@
             <header style="z-index: 1">
                 <div class="navbar">
                     
-                    <div class="logo image-container"><a href="http://127.0.0.1:8000/"><img  src="{% static 'assets/img/logoTest.png' %}"></a></div>
+                    <div class="logo image-container"><a href=" "><img  src="{% static 'assets/img/logoTest.png' %}"></a></div>
                     
                     <ul class="links">
-                        <li><a href="http://127.0.0.1:8000/">Inicio</a></li>
+                        <li><a href=" ">Inicio</a></li>
                         <li><a href="about_us">¿Quiénes somos?</a></li>
                         <li><a href="services">Servicios</a></li>
                         <li><a href="contact">Contacto</a></li>
@@ -215,7 +215,7 @@
                 </div>
 
                 <div class="dropdown_menu">
-                    <li><a href="http://127.0.0.1:8000/">Inicio</a></li>
+                    <li><a href=" ">Inicio</a></li>
                     <li><a href="about_us">¿Quiénes somos?</a></li>
                     <li><a href="services">Servicios</a></li>
                     <li><a href="contact">Contacto</a></li>
