--- a/dashboard/templates/layouts/dash_navbar.html
+++ b/dashboard/templates/layouts/dash_navbar.html
@@ -16,7 +16,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar" href="#">
+        <a class="navbar" href="{% url 'home' %}">
           <img
             src="{% static 'assets/images/testfarma_logo.png' %}"
             alt="TestFarma"
