--- a/login/templates/login/reset_password.html
+++ b/login/templates/login/reset_password.html
@@ -46,7 +46,11 @@
                                                placeholder="Correo Electronico">
 
                 <br><br>
-                <button type="submit" class="btn btn-warning">Continuar</button>
+                <div style="display: flex; gap: 10px;">
+                  <button type="submit" class="btn btn-warning">Continuar</button>
+                  <button class="btn btn-warning" type="button" onclick="link_to_view()">Regresar</button>
+                </div>
+                
                 
             </form>
             
