--- a/login/templates/signup/signup_part_three.html
+++ b/login/templates/signup/signup_part_three.html
@@ -39,10 +39,9 @@
             <p class="titulo-mid">
               Ahora puedes iniciar sesión con tu correo y contraseña
             </p>
-            <div class="btn-sig">
-              <button class="next-btn" type="submit">
-                Ir al Inicio de Sesión
-              </button>
+            <div class="btn-sig" style="gap: 10px;">
+              <button class="next-btn" type="submit">Ir a Incio de Sesion</button>
+              <button class="next-btn" type="button" onclick="link_to_view()">Regresar</button>
             </div>
           </form>
         </div>
