--- a/login/templates/signup/signup_part_two.html
+++ b/login/templates/signup/signup_part_two.html
@@ -47,8 +47,9 @@
             </div>
             <div class="form-group">{{ form.password2|as_crispy_field }}</div>
 
-            <div class="btn-sig">
-              <button class="next-btn" type="submit">Crear mi cuenta</button>
+            <div class="btn-sig" style="gap: 10px;">
+              <button class="next-btn" type="submit">Siguiente</button>
+              <button class="next-btn" type="button" onclick="link_to_view()">Regresar</button>
             </div>
           </form>
         </div>
