--- a/login/templates/signup/signup.html
+++ b/login/templates/signup/signup.html
@@ -102,7 +102,7 @@
 
             <div class="btn-sig" style="gap: 10px;">
               <button class="next-btn" type="submit">Siguiente</button>
-              <button class="next-btn" type="button" onclick="link_to_view()">Regresar</button>
+              <button class="next-btn" type="button" onclick="link_to_view()" style="text-decoration: none;">Regresar</button>
             </div>
           </div>
         </form>
