--- a/login/templates/signup/signup_part_three.html
+++ b/login/templates/signup/signup_part_three.html
@@ -41,7 +41,7 @@
             </p>
             <div class="btn-sig" style="gap: 10px;">
               <button class="next-btn" type="submit">Ir a Incio de Sesion</button>
-              <button class="next-btn" type="button" onclick="link_to_view()">Regresar</button>
+              <button class="next-btn" type="button" onclick="link_to_view()" style="text-decoration: none;">Regresar</button>
             </div>
           </form>
         </div>
