--- a/login/templates/signup/signup_part_three.html
+++ b/login/templates/signup/signup_part_three.html
@@ -40,7 +40,7 @@
               Ahora puedes iniciar sesión con tu correo y contraseña
             </p>
             <div class="btn-sig" style="gap: 10px;">
-              <button class="next-btn" type="submit">Ir a Incio de Sesion</button>
+              <button class="next-btn" type="submit">Ir a Inicio de Sesion</button>
               <button class="next-btn" type="button" onclick="link_to_view()" style="text-decoration: none;">Regresar</button>
             </div>
           </form>
