--- a/login/templates/login/password_reset_complete.html
+++ b/login/templates/login/password_reset_complete.html
@@ -3,7 +3,7 @@
         <div class="col-lg-5">
             <div class="card shadow-lg border-0 rounded-lg mt-0 mb-3">
                 <div class="alert alert-info">
-                    Tu contraseña fue restablecida correctamente. Haz click en este enlace <a href="{% url 'login' %}">Para inciar sesion</a>
+                    Tu contraseña fue restablecida correctamente. Haz click en este enlace <a href="{% url 'login' %}">Para iniciar sesion</a>
                 </div>
             </div>
         </div>
