--- a/login/templates/login/password_reset_email.html
+++ b/login/templates/login/password_reset_email.html
@@ -5,9 +5,11 @@
   Para iniciar el proceso de restablecimiento de contraseña para el usuario registrado con el correo {{ user.email }},
   Da click en el siguiente enlace:
 
-  {{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
+  <a href="{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}">Restablecer Contraseña</a>
 
-  Si al dar click en el enlace no funciona, copia y pega la URL en tu navegador.
+  Si al dar click en el enlace no funciona, copia y pega esta URL en tu navegador.
+
+  {{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
 
   Si no solicitaste un restablecimiento de contraseña, ignora este correo y no se realizará ningún cambio.
 
