--- a/login/templates/login/reset_password.html
+++ b/login/templates/login/reset_password.html
@@ -31,12 +31,12 @@
         </div>
         <div class="row">
           <div class="col col-md welcome-title">
-            <h1 class="title">¿Olviaste tu contraseña?</h1>
+            <h1 class="title">¿Olvidaste tu contraseña?</h1>
           </div>
         </div>
         <div class="row reset-form" style="display: flex; align-items: center; justify-content: center;">
 
-            <p class="" style="text-align: center; margin-top: 5px;">Ingresa tu correo electronico asociado a tu cuneta de TestFarma</p>
+            <p class="" style="text-align: center; margin-top: 5px;">Ingresa tu correo electrónico asociado a tu cuenta de TestFarma</p>
 
             <form method="POST" style="width: 70%; display: flex; align-items: center; justify-content: center;">
                 {% csrf_token %}
